# MCS

./: .gitignore  main.py  pyproject.toml  项目结构要求.txt
app/: __init__.py
app/autoposing/: anatomy_profile.py  balance_solver.py  body_compensation.py  constraints.py  controller_layout.py  controller_schema.py  controller_state.py  finger_profile.py  finger_schema.py  finger_solver.py  limb_solver.py  pose_prior.py  preview_pipeline.py  reach_constraints.py  relaxation_solver.py  runtime_retargeter.py  service.py  shoulder_solver.py  solver.py  solver_adapter.py  spine_solver.py  support_solver.py  visual_policy.py
app/autoposing/joint_rules/: __init__.py  ankle.py  common.py  elbow.py  foot.py  forearm.py  hip.py  knee.py  neck.py  shoulder.py  spine.py  wrist.py
app/command/: __init__.py
app/document/: __init__.py  document_manager.py  models.py
app/events/: __init__.py
app/playback/: __init__.py
app/selection/: __init__.py
app/tools/: __init__.py
app/undo/: __init__.py
assets/source/: model.fbx  model2.fbx
core/: __init__.py
core/animation/: __init__.py  models.py
core/autoposing/: __init__.py  models.py
core/ik/: __init__.py  two_bone.py
core/math/: __init__.py  transforms.py
core/rig/: __init__.py  models.py
core/scene/: __init__.py  models.py
core/skeleton/: __init__.py  models.py
docs/: architecture.md  autoposing-anatomy-rules-research.md  autoposing-architecture.md  autoposing-v1-v3-roadmap.md  setup.md
infra/importers/: __init__.py  runtime_asset_importer.py  skeleton_extractor.py
infra/io/: __init__.py  paths.py
infra/jobs/: __init__.py
infra/plugins/: __init__.py
infra/runtime/: __init__.py  runtime_pose_driver.py  runtime_pose_writer.py
infra/testing/: autoposing_self_check.py  qt_import_diagnostic.py
ui/: Main.qml  __init__.py
ui/components/: StyledTabButton.qml  StyledToolButton.qml
ui/inspector/: DetailsPanel.qml  PropertiesPanel.qml
ui/outliner/: OutlinerPanel.qml
ui/timeline/: TimelinePanel.qml
ui/viewmodels/: __init__.py  document_view_model.py
ui/viewport/: AutoPosingOverlay.qml  OrientationGizmo.qml  SkeletonOverlay.qml  ViewportCameraController.qml  ViewportPanel.qml
