[project]
name = "PySide QtQuick Project"

[tool.pyside6-project]
files = [
    "main.py",
    "core/ik/__init__.py",
    "core/ik/two_bone.py",
    "项目结构要求.txt",
    "core/autoposing/models.py",
    "core/rig/models.py",
    "core/scene/models.py",
    "core/skeleton/models.py",
    "core/animation/models.py",
    "app/autoposing/service.py",
    "app/document/models.py",
    "app/document/document_manager.py",
    "infra/io/paths.py",
    "infra/importers/runtime_asset_importer.py",
    "infra/importers/skeleton_extractor.py",
    "ui/Main.qml",
    "ui/components/StyledToolButton.qml",
    "ui/components/StyledTabButton.qml",
    "ui/viewmodels/document_view_model.py",
    "ui/viewport/AutoPosingOverlay.qml",
    "ui/viewport/ViewportPanel.qml",
    "ui/viewport/ViewportCameraController.qml",
    "ui/viewport/OrientationGizmo.qml",
    "ui/viewport/SkeletonOverlay.qml",
    "ui/timeline/TimelinePanel.qml",
    "ui/outliner/OutlinerPanel.qml",
    "ui/inspector/PropertiesPanel.qml",
    "ui/inspector/DetailsPanel.qml",
]
