[project]
name = "PySide QtQuick Project"

[tool.pyside6-project]
files = [
    "main.py",
    "core/ik/__init__.py",
    "core/ik/two_bone.py",
    "椤圭洰缁撴瀯瑕佹眰.txt",
    "core/math/__init__.py",
    "core/math/transforms.py",
    "core/autoposing/models.py",
    "core/rig/models.py",
    "core/scene/models.py",
    "core/skeleton/models.py",
    "core/animation/models.py",
    "app/autoposing/body_compensation.py",
    "app/autoposing/balance_solver.py",
    "app/autoposing/anatomy_profile.py",
    "app/autoposing/constraints.py",
    "app/autoposing/controller_layout.py",
    "app/autoposing/controller_schema.py",
    "app/autoposing/controller_state.py",
    "app/autoposing/finger_profile.py",
    "app/autoposing/finger_schema.py",
    "app/autoposing/finger_solver.py",
    "app/autoposing/joint_rules/ankle.py",
    "app/autoposing/joint_rules/__init__.py",
    "app/autoposing/joint_rules/common.py",
    "app/autoposing/joint_rules/elbow.py",
    "app/autoposing/joint_rules/foot.py",
    "app/autoposing/joint_rules/forearm.py",
    "app/autoposing/joint_rules/hip.py",
    "app/autoposing/joint_rules/knee.py",
    "app/autoposing/joint_rules/shoulder.py",
    "app/autoposing/joint_rules/wrist.py",
    "app/autoposing/limb_solver.py",
    "app/autoposing/pose_prior.py",
    "app/autoposing/reach_constraints.py",
    "app/autoposing/preview_pipeline.py",
    "app/autoposing/relaxation_solver.py",
    "app/autoposing/runtime_retargeter.py",
    "app/autoposing/service.py",
    "app/autoposing/shoulder_solver.py",
    "app/autoposing/solver.py",
    "app/autoposing/solver_adapter.py",
    "app/autoposing/spine_solver.py",
    "app/autoposing/support_solver.py",
    "app/autoposing/visual_policy.py",
    "app/document/models.py",
    "app/document/document_manager.py",
    "infra/io/paths.py",
    "infra/importers/runtime_asset_importer.py",
    "infra/importers/skeleton_extractor.py",
    "infra/runtime/__init__.py",
    "infra/runtime/runtime_pose_driver.py",
    "infra/runtime/runtime_pose_writer.py",
    "infra/testing/__init__.py",
    "infra/testing/autoposing_self_check.py",
    "infra/testing/qt_import_diagnostic.py",
    "ui/Main.qml",
    "ui/components/StyledToolButton.qml",
    "ui/components/StyledTabButton.qml",
    "ui/viewmodels/document_view_model.py",
    "ui/viewport/AutoPosingOverlay.qml",
    "ui/viewport/ViewportPanel.qml",
    "ui/viewport/ViewportCameraController.qml",
    "ui/viewport/OrientationGizmo.qml",
    "ui/viewport/SkeletonOverlay.qml",
    "ui/timeline/TimelinePanel.qml",
    "ui/outliner/OutlinerPanel.qml",
    "ui/inspector/PropertiesPanel.qml",
    "ui/inspector/DetailsPanel.qml",
]
